Simplify team page: merge all sections into Students with 4 TBA placeholders

--- a/team.html
+++ b/team.html
@@ -105,134 +105,46 @@
             </div>
         </section>
 
-        <!-- Postdocs & Research Scientists -->
+        <!-- Students -->
         <section class="section section-alt">
             <div class="container">
                 <div class="section-header">
-                    <h2>Postdoctoral Researchers</h2>
-                    <p>Research scientists advancing our projects</p>
-                </div>
-                
-                <div class="grid grid-4">
-                    <article class="card team-card">
-                        <img src="assets/images/team/alice-johnson.svg" alt="Dr. Alice Johnson" class="team-photo">
-                        <h3 class="team-name">Dr. Alice Johnson</h3>
-                        <p class="team-role">Postdoctoral Researcher</p>
-                        <p class="team-bio">
-                            Efficient transformer architectures and model compression.
-                        </p>
-                        <div class="team-links">
-                            <a href="mailto:alice@university.edu" aria-label="Email">📧</a>
-                            <a href="https://scholar.google.com" target="_blank" aria-label="Google Scholar">🎓</a>
-                        </div>
-                    </article>
-                    
-                    <article class="card team-card">
-                        <img src="assets/images/team/bob-williams.svg" alt="Dr. Bob Williams" class="team-photo">
-                        <h3 class="team-name">Dr. Bob Williams</h3>
-                        <p class="team-role">Research Scientist</p>
-                        <p class="team-bio">
-                            Knowledge-grounded dialogue and retrieval-augmented generation.
-                        </p>
-                        <div class="team-links">
-                            <a href="mailto:bob@university.edu" aria-label="Email">📧</a>
-                            <a href="https://github.com" target="_blank" aria-label="GitHub">💻</a>
-                        </div>
-                    </article>
-                </div>
-            </div>
-        </section>
-
-        <!-- PhD Students -->
-        <section class="section">
-            <div class="container">
-                <div class="section-header">
-                    <h2>PhD Students</h2>
-                    <p>Graduate researchers pursuing their doctoral degrees</p>
+                    <h2>Students</h2>
+                    <p>Graduate and undergraduate researchers in our lab</p>
                 </div>
 
                 <div class="grid grid-4">
-                    <article class="card team-card">
-                        <img src="assets/images/team/charlie-brown.svg" alt="Charlie Brown" class="team-photo">
-                        <h3 class="team-name">Charlie Brown</h3>
-                        <p class="team-role">PhD Student (4th year)</p>
-                        <p class="team-bio">
-                            Prompt engineering and in-context learning.
-                        </p>
-                        <div class="team-links">
-                            <a href="mailto:charlie@university.edu" aria-label="Email">📧</a>
-                            <a href="https://github.com" target="_blank" aria-label="GitHub">💻</a>
+                    <article class="card team-card team-card-empty">
+                        <div class="team-photo-placeholder">
+                            <span>?</span>
                         </div>
+                        <h3 class="team-name">To Be Appointed</h3>
+                        <p class="team-role">Student</p>
                     </article>
 
-                    <article class="card team-card">
-                        <img src="assets/images/team/diana-lee.svg" alt="Diana Lee" class="team-photo">
-                        <h3 class="team-name">Diana Lee</h3>
-                        <p class="team-role">PhD Student (3rd year)</p>
-                        <p class="team-bio">
-                            AI safety, bias detection, and fairness in NLP.
-                        </p>
-                        <div class="team-links">
-                            <a href="mailto:diana@university.edu" aria-label="Email">📧</a>
-                            <a href="https://twitter.com" target="_blank" aria-label="Twitter">🐦</a>
+                    <article class="card team-card team-card-empty">
+                        <div class="team-photo-placeholder">
+                            <span>?</span>
                         </div>
+                        <h3 class="team-name">To Be Appointed</h3>
+                        <p class="team-role">Student</p>
                     </article>
 
-                    <article class="card team-card">
-                        <img src="assets/images/team/eva-martinez.svg" alt="Eva Martinez" class="team-photo">
-                        <h3 class="team-name">Eva Martinez</h3>
-                        <p class="team-role">PhD Student (2nd year)</p>
-                        <p class="team-bio">
-                            Multilingual NLP and cross-lingual transfer.
-                        </p>
-                        <div class="team-links">
-                            <a href="mailto:eva@university.edu" aria-label="Email">📧</a>
-                            <a href="https://linkedin.com" target="_blank" aria-label="LinkedIn">💼</a>
+                    <article class="card team-card team-card-empty">
+                        <div class="team-photo-placeholder">
+                            <span>?</span>
                         </div>
+                        <h3 class="team-name">To Be Appointed</h3>
+                        <p class="team-role">Student</p>
                     </article>
 
-                    <article class="card team-card">
-                        <img src="assets/images/team/frank-chen.svg" alt="Frank Chen" class="team-photo">
-                        <h3 class="team-name">Frank Chen</h3>
-                        <p class="team-role">PhD Student (1st year)</p>
-                        <p class="team-bio">
-                            Information extraction and knowledge graphs.
-                        </p>
-                        <div class="team-links">
-                            <a href="mailto:frank@university.edu" aria-label="Email">📧</a>
-                            <a href="https://github.com" target="_blank" aria-label="GitHub">💻</a>
+                    <article class="card team-card team-card-empty">
+                        <div class="team-photo-placeholder">
+                            <span>?</span>
                         </div>
+                        <h3 class="team-name">To Be Appointed</h3>
+                        <p class="team-role">Student</p>
                     </article>
-                </div>
-            </div>
-        </section>
-
-        <!-- Alumni -->
-        <section class="section section-alt">
-            <div class="container">
-                <div class="section-header">
-                    <h2>Alumni</h2>
-                    <p>Former members who have moved on to great things</p>
-                </div>
-
-                <div class="grid grid-3">
-                    <div class="card" style="padding: var(--spacing-lg);">
-                        <h4>Dr. Grace Kim</h4>
-                        <p style="color: var(--text-secondary); margin-bottom: var(--spacing-xs);">PhD 2023</p>
-                        <p style="color: var(--text-light); font-size: 0.9rem;">Now: Research Scientist at OpenAI</p>
-                    </div>
-
-                    <div class="card" style="padding: var(--spacing-lg);">
-                        <h4>Dr. Henry Park</h4>
-                        <p style="color: var(--text-secondary); margin-bottom: var(--spacing-xs);">PhD 2022</p>
-                        <p style="color: var(--text-light); font-size: 0.9rem;">Now: Assistant Professor at MIT</p>
-                    </div>
-
-                    <div class="card" style="padding: var(--spacing-lg);">
-                        <h4>Dr. Iris Wang</h4>
-                        <p style="color: var(--text-secondary); margin-bottom: var(--spacing-xs);">Postdoc 2021-2023</p>
-                        <p style="color: var(--text-light); font-size: 0.9rem;">Now: Senior Researcher at Google DeepMind</p>
-                    </div>
                 </div>
             </div>
         </section>
