Update: Konkuk University green theme, fix WMT award text, bold important awards, restore student sample images

--- a/team.html
+++ b/team.html
@@ -89,15 +89,15 @@
                         <div class="professor-awards">
                             <h4>Honors & Awards</h4>
                             <div class="awards-grid">
-                                <div class="award-item"><strong>2025.10</strong> BEST Paper Award, The 37th Annual Conference on Human & Cognitive Language Technology, South Korea</div>
-                                <div class="award-item"><strong>2025.08</strong> Selected as a Member of the National Representative AI Research Team (with NC AI), South Korea</div>
-                                <div class="award-item"><strong>2024.10</strong> BEST Paper Award, The 36th Annual Conference on Human & Cognitive Language Technology, South Korea</div>
-                                <div class="award-item"><strong>2023.10</strong> Outstanding Paper Award, The 35th Annual Conference on Human & Cognitive Language Technology, South Korea</div>
-                                <div class="award-item"><strong>2022.12</strong> NAVER Ph.D Fellowship Award, Scholarship Award, South Korea</div>
-                                <div class="award-item"><strong>2022.12</strong> 1st Place in WMT 2022 QE Task 3, WMT 2022 - EMNLP 2022, Abu Dhabi</div>
-                                <div class="award-item"><strong>2022.10</strong> Outstanding Paper Award, The 34th Annual Conference on Human & Cognitive Language Technology, South Korea</div>
-                                <div class="award-item"><strong>2021.10</strong> Outstanding Paper Award, The 33rd Annual Conference on Human & Cognitive Language Technology, South Korea</div>
-                                <div class="award-item"><strong>2021.07</strong> 4th Place in CommonGen 1.1 Leaderboard, World Record</div>
+                                <div class="award-item"><strong>2025.10</strong> <b>BEST Paper Award</b>, The 37th Annual Conference on Human & Cognitive Language Technology, South Korea</div>
+                                <div class="award-item"><strong>2025.08</strong> Selected as a Member of the <b>National Representative AI Research Team</b> (with NC AI), South Korea</div>
+                                <div class="award-item"><strong>2024.10</strong> <b>BEST Paper Award</b>, The 36th Annual Conference on Human & Cognitive Language Technology, South Korea</div>
+                                <div class="award-item"><strong>2023.10</strong> <b>Outstanding Paper Award</b>, The 35th Annual Conference on Human & Cognitive Language Technology, South Korea</div>
+                                <div class="award-item"><strong>2022.12</strong> <b>NAVER Ph.D Fellowship Award</b>, Scholarship Award, South Korea</div>
+                                <div class="award-item"><strong>2022.12</strong> <b>1st Place</b> in WMT 2022 QE Task 3, EMNLP 2022, Abu Dhabi</div>
+                                <div class="award-item"><strong>2022.10</strong> <b>Outstanding Paper Award</b>, The 34th Annual Conference on Human & Cognitive Language Technology, South Korea</div>
+                                <div class="award-item"><strong>2021.10</strong> <b>Outstanding Paper Award</b>, The 33rd Annual Conference on Human & Cognitive Language Technology, South Korea</div>
+                                <div class="award-item"><strong>2021.07</strong> <b>4th Place</b> in CommonGen 1.1 Leaderboard, World Record</div>
                             </div>
                         </div>
                     </article>
@@ -115,33 +115,25 @@
 
                 <div class="grid grid-4">
                     <article class="card team-card team-card-empty">
-                        <div class="team-photo-placeholder">
-                            <span>?</span>
-                        </div>
+                        <img src="assets/images/team/charlie-brown.svg" alt="To Be Appointed" class="team-photo">
                         <h3 class="team-name">To Be Appointed</h3>
                         <p class="team-role">Student</p>
                     </article>
 
                     <article class="card team-card team-card-empty">
-                        <div class="team-photo-placeholder">
-                            <span>?</span>
-                        </div>
+                        <img src="assets/images/team/diana-lee.svg" alt="To Be Appointed" class="team-photo">
                         <h3 class="team-name">To Be Appointed</h3>
                         <p class="team-role">Student</p>
                     </article>
 
                     <article class="card team-card team-card-empty">
-                        <div class="team-photo-placeholder">
-                            <span>?</span>
-                        </div>
+                        <img src="assets/images/team/eva-martinez.svg" alt="To Be Appointed" class="team-photo">
                         <h3 class="team-name">To Be Appointed</h3>
                         <p class="team-role">Student</p>
                     </article>
 
                     <article class="card team-card team-card-empty">
-                        <div class="team-photo-placeholder">
-                            <span>?</span>
-                        </div>
+                        <img src="assets/images/team/frank-chen.svg" alt="To Be Appointed" class="team-photo">
                         <h3 class="team-name">To Be Appointed</h3>
                         <p class="team-role">Student</p>
                     </article>
