Update logo, Latest News with lab announcements, Featured Publications with 5 recent papers

--- a/index.html
+++ b/index.html
@@ -141,31 +141,30 @@
                     <h2>Latest News</h2>
                     <p>Stay updated with our recent achievements and announcements.</p>
                 </div>
-                
-                <div class="grid grid-2">
-                    <article class="card">
-                        <div class="card-content">
-                            <span class="publication-year">Dec 2024</span>
-                            <h3 class="card-title">Paper Accepted at ACL 2025</h3>
-                            <p class="card-text">
-                                Our paper on "Efficient Fine-tuning of Large Language Models" has been accepted 
-                                at ACL 2025. Congratulations to the team!
-                            </p>
-                            <a href="publications.html" class="btn btn-outline">Read More</a>
-                        </div>
-                    </article>
-                    
-                    <article class="card">
-                        <div class="card-content">
-                            <span class="publication-year">Nov 2024</span>
-                            <h3 class="card-title">New PhD Students Join the Lab</h3>
-                            <p class="card-text">
-                                We welcome three new PhD students to our research group. They will be working on
-                                dialogue systems and multilingual NLP.
-                            </p>
-                            <a href="team.html" class="btn btn-outline">Meet the Team</a>
-                        </div>
-                    </article>
+
+                <div class="card" style="padding: var(--spacing-xl);">
+                    <ul style="list-style: none; padding: 0; margin: 0;">
+                        <li style="padding: var(--spacing-md) 0; border-bottom: 1px solid var(--border-color);">
+                            <span class="publication-year">Mar 2026</span>
+                            <strong>건국대학교 컴퓨터공학부 조교수 임용 및 LAMI Lab 개설</strong>
+                        </li>
+                        <li style="padding: var(--spacing-md) 0; border-bottom: 1px solid var(--border-color);">
+                            <span class="publication-year">Aug 2025</span>
+                            🔥 <strong>5 papers</strong> are accepted at <strong>EMNLP 2025</strong>.
+                        </li>
+                        <li style="padding: var(--spacing-md) 0; border-bottom: 1px solid var(--border-color);">
+                            <span class="publication-year">May 2025</span>
+                            🔥 <strong>1 paper</strong> is accepted at <strong>ACL 2025</strong>.
+                        </li>
+                        <li style="padding: var(--spacing-md) 0; border-bottom: 1px solid var(--border-color);">
+                            <span class="publication-year">Feb 2025</span>
+                            🔥 <strong>1 paper</strong> is accepted at <strong>ICLR 2025</strong>.
+                        </li>
+                        <li style="padding: var(--spacing-md) 0;">
+                            <span class="publication-year">Feb 2025</span>
+                            🔥 <strong>2 papers</strong> are accepted at <strong>NAACL 2025</strong>.
+                        </li>
+                    </ul>
                 </div>
             </div>
         </section>
@@ -180,27 +179,52 @@
 
                 <div class="card">
                     <div class="publication-item">
-                        <span class="publication-year">2024</span>
-                        <h3 class="publication-title">Scaling Laws for Neural Language Models: A Comprehensive Study</h3>
-                        <p class="publication-authors">Jane Smith, John Doe, Alice Johnson, Bob Williams</p>
-                        <p class="publication-venue">Proceedings of NeurIPS 2024</p>
+                        <span class="publication-year">EMNLP 2025</span>
+                        <h3 class="publication-title">🌟 Hallucination-Free? Assessing the Reliability of Leading AI Legal Research Tools</h3>
+                        <p class="publication-authors"><strong>Jaehyung Seo</strong>, Jongchan Kim, Hyeonseok Moon, Sumin Kang, Yein Park, Chanjun Park, Heuiseok Lim*</p>
+                        <p class="publication-venue">Empirical Methods in Natural Language Processing (EMNLP), 2025</p>
                         <div class="publication-links">
-                            <a href="#">PDF</a>
-                            <a href="#">arXiv</a>
-                            <a href="#">Code</a>
-                            <a href="#">BibTeX</a>
+                            <a href="https://aclanthology.org/2025.emnlp-main.684/" target="_blank">Paper</a>
                         </div>
                     </div>
 
                     <div class="publication-item">
-                        <span class="publication-year">2024</span>
-                        <h3 class="publication-title">Towards More Efficient Transformer Architectures</h3>
-                        <p class="publication-authors">Alice Johnson, Jane Smith, Charlie Brown</p>
-                        <p class="publication-venue">Proceedings of ICML 2024</p>
+                        <span class="publication-year">EMNLP 2025 Findings</span>
+                        <h3 class="publication-title">🌟 KoLEG: On-the-Fly Korean Legal Knowledge Editing with Continuous Retrieval</h3>
+                        <p class="publication-authors"><strong>Jaehyung Seo</strong>, Dahyun Jung, Jaewook Lee, Yongchan Chun, Dongjun Kim, Hwijung Ryu, Donghoon Shin, Heuiseok Lim*</p>
+                        <p class="publication-venue">Empirical Methods in Natural Language Processing (EMNLP) Findings, 2025</p>
                         <div class="publication-links">
-                            <a href="#">PDF</a>
-                            <a href="#">arXiv</a>
-                            <a href="#">Code</a>
+                            <a href="https://aclanthology.org/2025.findings-emnlp.489/" target="_blank">Paper</a>
+                        </div>
+                    </div>
+
+                    <div class="publication-item">
+                        <span class="publication-year">EMNLP 2025</span>
+                        <h3 class="publication-title">🌟 MultiDocFusion: Hierarchical and Multimodal Chunking Pipeline for Enhanced RAG on Long Industrial Documents</h3>
+                        <p class="publication-authors">Joong Min Shin, Chanjun Park, Jeongbae Park, <strong>Jaehyung Seo</strong>*, Heuiseok Lim*</p>
+                        <p class="publication-venue">Empirical Methods in Natural Language Processing (EMNLP), 2025</p>
+                        <div class="publication-links">
+                            <a href="https://aclanthology.org/2025.emnlp-main.1062/" target="_blank">Paper</a>
+                        </div>
+                    </div>
+
+                    <div class="publication-item">
+                        <span class="publication-year">EMNLP 2025</span>
+                        <h3 class="publication-title">🌟 Metric Calculating Benchmark: Code-Verifiable Complicate Instruction Following Benchmark for Large Language Models</h3>
+                        <p class="publication-authors">Hyeonseok Moon, Seongtae Hong, <strong>Jaehyung Seo</strong>*, Heuiseok Lim*</p>
+                        <p class="publication-venue">Empirical Methods in Natural Language Processing (EMNLP), 2025</p>
+                        <div class="publication-links">
+                            <a href="https://aclanthology.org/2025.emnlp-main.1051/" target="_blank">Paper</a>
+                        </div>
+                    </div>
+
+                    <div class="publication-item">
+                        <span class="publication-year">ICLR 2025</span>
+                        <h3 class="publication-title">🌟 K-HALU: Multiple Answer Korean Hallucination Benchmark for Large Language Models</h3>
+                        <p class="publication-authors"><strong>Jaehyung Seo</strong>, Heuiseok Lim*</p>
+                        <p class="publication-venue">International Conference on Learning Representations (ICLR), 2025</p>
+                        <div class="publication-links">
+                            <a href="https://openreview.net/forum?id=VnLhUogHYE" target="_blank">Paper</a>
                         </div>
                     </div>
                 </div>
