Fix featured publication, translate news to English, update logo

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                     <ul style="list-style: none; padding: 0; margin: 0;">
                         <li style="padding: var(--spacing-md) 0; border-bottom: 1px solid var(--border-color);">
                             <span class="publication-year">Mar 2026</span>
-                            <strong>건국대학교 컴퓨터공학부 조교수 임용 및 LAMI Lab 개설</strong>
+                            <strong>Appointed as Assistant Professor at Konkuk University & Established LAMI Lab</strong>
                         </li>
                         <li style="padding: var(--spacing-md) 0; border-bottom: 1px solid var(--border-color);">
                             <span class="publication-year">Aug 2025</span>
@@ -180,8 +180,8 @@
                 <div class="card">
                     <div class="publication-item">
                         <span class="publication-year">EMNLP 2025</span>
-                        <h3 class="publication-title">🌟 Hallucination-Free? Assessing the Reliability of Leading AI Legal Research Tools</h3>
-                        <p class="publication-authors"><strong>Jaehyung Seo</strong>, Jongchan Kim, Hyeonseok Moon, Sumin Kang, Yein Park, Chanjun Park, Heuiseok Lim*</p>
+                        <h3 class="publication-title">🌟 The Impact of Negated Text on Hallucination with Large Language Models</h3>
+                        <p class="publication-authors"><strong>Jaehyung Seo</strong>, Hyeonseok Moon, Heuiseok Lim*</p>
                         <p class="publication-venue">Empirical Methods in Natural Language Processing (EMNLP), 2025</p>
                         <div class="publication-links">
                             <a href="https://aclanthology.org/2025.emnlp-main.684/" target="_blank">Paper</a>
