Update affiliation to include AI, add bold emphasis

--- a/team.html
+++ b/team.html
@@ -70,7 +70,7 @@
                         <div class="professor-header">
                             <h3 class="professor-name">Jaehyung Seo</h3>
                             <p class="professor-role">Assistant Professor, KonKuk University</p>
-                            <p class="professor-affiliation">Affiliation: Computer Science and Engineering</p>
+                            <p class="professor-affiliation">Affiliation: <strong>Computer Science and Engineering (Artificial Intelligence)</strong></p>
                             <p class="professor-education">Ph.D. in Computer Science and Engineering, Korea University (Seoul)</p>
                             <p class="professor-education">M.S. in Computer Science and Engineering, Korea University (Seoul)</p>
                             <p class="professor-education">B.S. in English Language and Business School at Korea University (Seoul)</p>
