Switch logo from SVG to PNG for better sizing

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <header class="header">
         <div class="container">
             <a href="index.html" class="logo">
-                <img src="assets/images/logos/logo.svg" alt="ELION Lab Logo">
+                <img src="assets/images/logos/logo.png" alt="ELION Lab Logo">
                 <span>ELION Lab</span>
             </a>
             
