Add separator line above Academic Services, left align content

--- a/team.html
+++ b/team.html
@@ -115,7 +115,7 @@
                         </div>
 
                         <!-- Academic Services -->
-                        <div class="professor-research highlights">
+                        <div class="professor-research highlights" style="border-top: 1px solid var(--bg-tertiary); padding-top: var(--spacing-lg); margin-top: var(--spacing-lg);">
                             <h4>Academic Services</h4>
                             <p><strong>Reviewer:</strong><br>
                             • AI/ML: ICLR (2025, 2026), AAAI (2026)<br>
