Update MIST & IITP invited talk format

--- a/team.html
+++ b/team.html
@@ -126,7 +126,7 @@
                         <div class="professor-research highlights">
                             <h4>Invited Talks & Presentations</h4>
                             <p>• Invited Presentation at EMNLP 2025 NLLP Workshop<br>
-                            • Invited Talk at MIST & IITP AI Frontier International Conference (VIP Session)<br>
+                            • MIST & IITP (2025): AI Frontier International Conference (VIP Session)<br>
                             • DGIST (2025): Commonsense Reasoning or Hallucination?<br>
                             • Dongguk University (2023): Introduction to NLP and Commonsense Reasoning<br>
                             • NongHyup Bank (2020): Data Science Training for New Employees</p>
