Fix: simplify Model Editing description

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         <div class="feature-icon">✏️</div>
                         <h3 class="feature-title">Model Editing</h3>
                         <p class="feature-text">
-                            We explore model editing as a means of modifying internal knowledge representations, enabling targeted correction, updating, and control of language model behavior without full retraining.
+                            We explore model editing as a means of modifying internal knowledge representations, enabling correction, updating, and control of language model behavior without retraining.
                         </p>
                     </div>
 
