Remove image from Our Mission section, make full width

--- a/about.html
+++ b/about.html
@@ -58,23 +58,17 @@
         <!-- Mission Section -->
         <section class="section">
             <div class="container">
-                <div class="grid grid-2" style="align-items: center; gap: var(--spacing-3xl);">
-                    <div>
-                        <h2>Our Mission</h2>
-                        <p>
-                            <strong>ELION</strong> stands for <strong>E</strong>lucidating <strong>L</strong>anguage <strong>I</strong>ntelligence & Representati<strong>ON</strong>.
-                        </p>
-                        <p>
-                            Our mission is to elucidate how language models represent knowledge and reason, enabling interpretable, controllable, and trustworthy language intelligence that can ultimately interact with the real world.
-                        </p>
-                        <p>
-                            Ultimately, we aim to extend language intelligence beyond text, enabling models to infer physical and social commonsense from non-linguistic signals and to interact with the real world. By doing so, ELION Lab strives to provide the core technologies and recipes for next-generation language intelligence that can reason, adapt, and operate in real-world environments.
-                        </p>
-                    </div>
-                    <div>
-                        <img src="team/BART.png" alt="ELION Lab Team"
-                             style="border-radius: var(--radius-lg); box-shadow: var(--shadow-lg);">
-                    </div>
+                <div class="section-header">
+                    <h2>Our Mission</h2>
+                    <p>
+                        <strong>ELION</strong> stands for <strong>E</strong>lucidating <strong>L</strong>anguage <strong>I</strong>ntelligence & Representati<strong>ON</strong>.
+                    </p>
+                    <p>
+                        Our mission is to elucidate how language models represent knowledge and reason, enabling interpretable, controllable, and trustworthy language intelligence that can ultimately interact with the real world.
+                    </p>
+                    <p>
+                        Ultimately, we aim to extend language intelligence beyond text, enabling models to infer physical and social commonsense from non-linguistic signals and to interact with the real world. By doing so, ELION Lab strives to provide the core technologies and recipes for next-generation language intelligence that can reason, adapt, and operate in real-world environments.
+                    </p>
                 </div>
             </div>
         </section>
