Add Our Values section with new content to About page

--- a/about.html
+++ b/about.html
@@ -73,6 +73,42 @@
             </div>
         </section>
 
+        <!-- Values Section -->
+        <section class="section section-alt">
+            <div class="container">
+                <div class="section-header">
+                    <h2>Our Values</h2>
+                    <p>The principles that guide our research and collaboration</p>
+                </div>
+
+                <div class="grid grid-3">
+                    <div class="card feature-card">
+                        <div class="feature-icon">🤝</div>
+                        <h3 class="feature-title">We Are One Team</h3>
+                        <p class="feature-text">
+                            Members of ELION Lab are not competitors, but trusted collaborators moving forward together. We believe in a supportive and respectful research environment where everyone grows together as one team.
+                        </p>
+                    </div>
+
+                    <div class="card feature-card">
+                        <div class="feature-icon">🧠</div>
+                        <h3 class="feature-title">All Languages, One Mind</h3>
+                        <p class="feature-text">
+                            Language connects everything. ELION Lab values research that is interdisciplinary, interconnected, and continuous, embracing ideas across domains to build unified language intelligence.
+                        </p>
+                    </div>
+
+                    <div class="card feature-card">
+                        <div class="feature-icon">🌍</div>
+                        <h3 class="feature-title">We Value Collaboration</h3>
+                        <p class="feature-text">
+                            Collaboration is central to our culture. Members of ELION Lab are encouraged to actively participate in domestic and international collaborative research, engaging with diverse researchers around the world and growing through shared experiences.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <!-- Footer -->
