Update intro text and reduce font size

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                 <p class="subtitle" style="font-size: 1.2rem; margin-bottom: 0.5rem;">
                     <strong>Language Intelligence & Representation</strong>
                 </p>
-                <p class="subtitle">
-                    Our research group explores the frontiers of natural language processing and AI systems, guided by the vision of <strong>E</strong>lucidating <strong>L</strong>anguage <strong>I</strong>ntelligence & Representati<strong>ON</strong> (ELION), to interpret how language models represent knowledge, reason, and generate meaning.
+                <p class="subtitle" style="font-size: 0.9em;">
+                    Our research group explores the frontiers of natural language processing and AI systems, guided by the vision of <strong>E</strong>lucidating <strong>L</strong>anguage <strong>I</strong>ntelligence & Representati<strong>ON</strong> (ELION), to understand how language models represent knowledge, reason, and generate meaning toward interpretable, controllable, and trustworthy language intelligence for real-world interaction.
                 </p>
                 <div class="hero-buttons">
                     <a href="publications.html" class="btn btn-primary">Our Research</a>
