--- a/index.html
+++ b/index.html
@@ -83,15 +83,15 @@
                 <div class="grid grid-3">
                     <div class="card feature-card">
                         <div class="feature-icon">🧠</div>
-                        <h3 class="feature-title">Small / Large Language Models</h3>
+                        <h3 class="feature-title">Large Language Models & World Models</h3>
                         <p class="feature-text">
-                            We develop and analyze both small and large language models to understand how model scale, structure, and representations affect reasoning, generalization, and controllability.
+                            We develop and analyze large language models to study how scale, structure, and representations support reasoning, generalization, controllability, and world modeling.
                         </p>
                     </div>
 
                     <div class="card feature-card">
                         <div class="feature-icon">💭</div>
-                        <h3 class="feature-title">Thinking / Reasoning</h3>
+                        <h3 class="feature-title">Thinking & Reasoning</h3>
                         <p class="feature-text">
                             We study the internal representations and processes that enable language models to perform multi-step thinking and reasoning, aiming to interpret how conclusions are formed and fail.
                         </p>
@@ -99,7 +99,7 @@
 
                     <div class="card feature-card">
                         <div class="feature-icon">🔍</div>
-                        <h3 class="feature-title">Hallucination Detection / Mitigation</h3>
+                        <h3 class="feature-title">Hallucination Detection & Mitigation</h3>
                         <p class="feature-text">
                             We investigate hallucination as a representational and epistemic failure in language models, developing methods to detect, analyze, and mitigate ungrounded or misleading generations.
                         </p>
@@ -115,17 +115,9 @@
 
                     <div class="card feature-card">
                         <div class="feature-icon">🌐</div>
-                        <h3 class="feature-title">Multilingual / Multimodality</h3>
+                        <h3 class="feature-title">Multilingual & Multimodality</h3>
                         <p class="feature-text">
                             We study how language models represent and align meaning across languages and modalities, with the goal of building unified models that generalize beyond linguistic and modal boundaries.
-                        </p>
-                    </div>
-
-                    <div class="card feature-card">
-                        <div class="feature-icon">🤖</div>
-                        <h3 class="feature-title">AI Agents</h3>
-                        <p class="feature-text">
-                            We design and analyze language-model-based AI agents, focusing on how internal representations support planning, decision-making, and interaction in dynamic environments.
                         </p>
                     </div>
                 </div>
