Update: Language Models & World Models, restore AI Agents

--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
                 <div class="grid grid-3">
                     <div class="card feature-card">
                         <div class="feature-icon">🧠</div>
-                        <h3 class="feature-title">Large Language Models & World Models</h3>
+                        <h3 class="feature-title">Language Models & World Models</h3>
                         <p class="feature-text">
-                            We develop and analyze large language models to study how scale, structure, and representations support reasoning, generalization, controllability, and world modeling.
+                            We develop and analyze language models to study how scale, structure, and representations support reasoning, generalization, controllability, and world modeling.
                         </p>
                     </div>
 
@@ -118,6 +118,14 @@
                         <h3 class="feature-title">Multilingual & Multimodality</h3>
                         <p class="feature-text">
                             We study how language models represent and align meaning across languages and modalities, with the goal of building unified models that generalize beyond linguistic and modal boundaries.
+                        </p>
+                    </div>
+
+                    <div class="card feature-card">
+                        <div class="feature-icon">🤖</div>
+                        <h3 class="feature-title">AI Agents</h3>
+                        <p class="feature-text">
+                            We design and analyze language-model-based AI agents, focusing on how internal representations support planning, decision-making, and interaction in dynamic environments.
                         </p>
                     </div>
                 </div>
