Rename to Join Our Research Team, add Ongoing Projects title inside card

--- a/index.html
+++ b/index.html
@@ -132,14 +132,15 @@
             </div>
         </section>
 
-        <!-- Join Our Research: Ongoing Projects -->
+        <!-- Join Our Research Team -->
         <section class="section section-alt">
             <div class="container">
                 <div class="section-header">
-                    <h2>Join Our Research: Ongoing Projects</h2>
+                    <h2>Join Our Research Team</h2>
                 </div>
 
                 <div class="card" style="padding: var(--spacing-xl);">
+                    <h3 style="text-align: center; margin-bottom: var(--spacing-xl);">Ongoing Projects</h3>
                     <div style="margin-bottom: var(--spacing-lg);">
                         <h4>1. Continual Representation Learning in Language Intelligence</h4>
                         <p style="margin-left: var(--spacing-md); color: var(--text-secondary);">
