--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 <div class="card" style="padding: var(--spacing-xl);">
                     <h3 style="text-align: center; margin-bottom: var(--spacing-xl);">Ongoing Projects</h3>
                     <div style="margin-bottom: var(--spacing-lg);">
-                        <h4>1. Continual Representation Learning in Language Intelligence</h4>
+                        <h4>1. Continual Representation Learning in Language Models</h4>
                         <p style="margin-left: var(--spacing-md); color: var(--text-secondary);">
                             We study how language models can continuously update and refine their internal representations over time, enabling lifelong learning without forgetting previously acquired knowledge.
                         </p>
